<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mapbox="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_sp_large"
        android:layout_marginBottom="@dimen/dimen_dp_medium"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="20dp"
        app:cardElevation="2dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="false">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dimen_dp_medium"
            android:layout_marginBottom="@dimen/dimen_dp_medium"
            android:layout_marginLeft="@dimen/dimen_dp_large"
            android:layout_marginRight="@dimen/dimen_dp_large"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbl_mesa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_weight="0.80"
                    android:layout_gravity="center_vertical"
                    android:text="@string/item_mesa"
                    android:textSize="@dimen/dimen_sp_xlarge"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/img_send_to_server"
                    android:layout_width="wrap_content"
                    android:padding="@dimen/dimen_dp_medium"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_refresh"
                    android:layout_weight="0.20"
                    android:text="@string/item_enter" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbl_distrito_title"
                    android:layout_width="match_parent"
                    android:layout_margin="@dimen/dimen_dp_small"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:text="@string/item_distrito" />

                <TextView
                    android:id="@+id/lbl_distrito"
                    android:layout_margin="@dimen/dimen_dp_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="1" />

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginBottom="@dimen/dimen_dp_medium"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbl_colegio_title"
                    android:layout_width="match_parent"
                    android:layout_margin="@dimen/dimen_dp_small"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:text="@string/item_colegio" />

                <TextView
                    android:id="@+id/lbl_colegio"
                    android:layout_width="match_parent"
                    android:layout_margin="@dimen/dimen_dp_small"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="Colegio Antoni Diaz Villamil" />

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>
